--- a/.github/workflows/build-push-mario-docker.yaml
+++ b/.github/workflows/build-push-mario-docker.yaml
@@ -3,10 +3,10 @@ name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
 on:
   push:
     branches:
-      - main
+      - master
  
 env:
-  VERSION: $(( $(cat version.txt) + 1 ))
+  VERSION: ${{ github.run_number }}
   
 jobs:
   
