--- a/.github/workflows/build-push-mario-docker.yaml
+++ b/.github/workflows/build-push-mario-docker.yaml
@@ -1,3 +1,4 @@
+
 name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
  
 on:
@@ -24,3 +25,26 @@ jobs:
         run: |
           docker build -t docker.io/nynoaccess/mario-game:mario-game-${{ env.VERSION }} .
           docker push docker.io/nynoaccess/mario-game:mario-game-${{ env.VERSION }}
+
+ 
+  run_container_image_scan_on_supermario_docker_image:
+    runs-on: ubuntu-latest  
+ 
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+ 
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        
+      - name: Get Docker Image from Docker Hub
+        run: |
+          docker pull docker.io/nynoaccess/mario-game:mario-game-1
+          docker save -o supermariolatestdockerimage.tar docker.io/nynoaccess/mario-game:mario-game-1
+     
+      - name: Run Trivy vulnerability scanner in tarball mode
+        uses: aquasecurity/trivy-action@master
+        with: 
+          input: 'supermariolatestdockerimage.tar'
+          exit-code: '1'
+          severity: 'CRITICAL,HIGH'
